# serializer version: 1
# name: test_entities[light.bedroom_bedroom_lamp-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 7000,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.bedroom_bedroom_lamp',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'cync',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': '1000-1101',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[light.bedroom_bedroom_lamp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 205,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.COLOR_TEMP: 'color_temp'>,
      <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: 2999,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom Lamp',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
        27.827,
        56.922,
      ),
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 7000,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
        255,
        177,
        110,
      ),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGB: 'rgb'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
        0.496,
        0.383,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.bedroom_bedroom_lamp',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[light.office_lamp_bulb_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 7000,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.office_lamp_bulb_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'cync',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': '1000-1111',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[light.office_lamp_bulb_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Lamp Bulb 1',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: None,
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 7000,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: None,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGB: 'rgb'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'light.office_lamp_bulb_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[light.office_lamp_bulb_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 7000,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.office_lamp_bulb_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'cync',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'light',
    'unique_id': '1000-1112',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[light.office_lamp_bulb_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Lamp Bulb 2',
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 7000,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGB: 'rgb'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.office_lamp_bulb_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
